# hiearchical-compositional-generalization

./: .gitignore  AGENTS.md  _test_crosslayer_metric.py  main.ipynb  network.py  network_aux.py  phase_transition.ipynb  plotting.py  pyproject.toml  run_relu.py  sweep_sigma.py  task.py  test_erf_kernel_fixpoints.py  train.py
